--- a/stock-easy-app/src/index.css
+++ b/stock-easy-app/src/index.css
@@ -136,6 +136,8 @@
 }
 
 html, body {
+  /* Réduction globale ~10% de toute l’interface (équivalent à un zoom-out navigateur) */
+  font-size: 90%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
